# sharestatic

./: CMakeLists.txt  sharedstaticConfig.cmake.in
